fix: align AI workflow contracts and schedules
- fail fast when task creation fails before writing Claude/Codex requests\n- unify POSTMARKET scoring universe and refresh schedule/handoff docs\n- add scheduler/request contract coverage and stabilize portfolio risk integration test\n\nVerified with:\n- mvn -q -DskipTests compile\n- MAVEN_OPTS=\'-Djdk.attach.allowAttachSelf=true\' mvn -q -Dtest=ClaudeCodeRequestWriterServiceContractTest,MiddayReviewJobRequestContractTest,PostmarketDataPrepJobUnifiedUniverseTest test\n- MAVEN_OPTS=\'-Djdk.attach.allowAttachSelf=true\' mvn -q test